Fix iOS date picker not showing

--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -79,6 +79,7 @@
   }
 
   &-label {
+    position: relative;
     display: flex;
     align-items: center;
     padding: 0.25rem 0.5rem;
