--- a/src/scss/components/_forms.scss
+++ b/src/scss/components/_forms.scss
@@ -76,6 +76,12 @@
   &-date-picker-input {
     position: absolute;
     visibility: hidden;
+    top: 0;
+    left: 0;
+
+    &.ios-switch {
+      visibility: visible;
+    }
   }
 
   label {
